[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scripts/UI/FearBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 56 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 288, 208 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="FearBox" parent="." instance=ExtResource( 3 )]
margin_left = -24.0
margin_top = -128.0
margin_right = 16.0
margin_bottom = -88.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
